--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Lecture 1/Lecture_1_4.c
 Lecture 1/Lecture_1_5.c
 Lecture 2/Lecture_2_1.c
 Lecture 2/Lecture_2_2c.c
+Lecture 2/3_Ternary_nested_if_else.c
