--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Lecture 1/Lecture_1_5.c
 Lecture 2/Lecture_2_1.c
 Lecture 2/Lecture_2_2c.c
 Lecture 2/3_Ternary_nested_if_else.c
+Lecture 3/1_swich_case.c
